# marketintel

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml  railway.toml  render.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml
apps/api/: admin.py  auth.py  exceptions.py  filters.py  models.py  pagination.py  serializers.py  throttling.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py
apps/core/: admin.py  health.py  logging.py  metrics.py  middleware.py  models.py  request_context.py  storage.py
apps/core/migrations/: 0001_initial.py
apps/dashboard/: urls.py  views.py
apps/instruments/: admin.py  apps.py  models.py  services.py
apps/news/: admin.py  models.py  services.py
apps/prices/: models.py  services.py
config/: celery.py  observability.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: CONTRIBUTING.md  DEPLOY.md  MANUAL.html  RUNBOOK.md  data-model.md  pipelines.md
docs/adr/: 0001-django-as-backend.md  0002-celery-vs-rq.md  0003-dagster-orchestration.md  0004-medallion-architecture.md  0005-postgres-partitioning.md  0006-duckdb-analytical-layer.md  0007-structured-logging.md
examples/: README.md  curl_examples.sh  postman_collection.json  python_client.py
infra/grafana/: provisioning.yaml
infra/k8s/base/: configmap.yaml  (+15 more)
infra/prometheus/: alerts.yml  prometheus.yml
notebooks/: README.md
pipelines/: apps.py
pipelines/connectors/: __init__.py  base.py  binance.py  coingecko.py  cryptopanic.py  yahoo_finance.py
pipelines/orchestration/: __init__.py  assets.py  dagster.yaml  jobs.py  sensors.py  workspace.yaml
pipelines/tasks/: __init__.py  common.py  ingest.py  maintenance.py  transform.py  yahoo.py
scripts/: backfill.sh  backup.sh  bootstrap.sh  dlq_inspect.py  expose_public.sh  go_public.sh  healthcheck.sh  issue_api_key.py
seeds/: instruments.json  instruments_extended.json  sources.json
tests/: conftest.py  factories.py  test_api_endpoints.py  test_api_key_auth.py  test_candle_idempotency.py  test_celery_tasks.py  test_circuit_breaker.py  test_connector_coingecko.py  test_news_upsert.py  test_scd2_upsert.py  test_storage.py  test_token_bucket.py
warehouse/: __init__.py  db.py
warehouse/queries/: correlation_matrix.sql  volume_by_session.sql
(+24 files in other folders)
